# node

./: .gitignore  Dockerfile  README.md  application.py  config.py  env.setup.txt  main.py  pyproject.toml  requirements.txt
app/: __init__.py  cost.py  crypto.py  ipfs.py  setup.py  storage.py
app/chain/: __init__.py  model_registry.py  models.py  node_registry.py  session_manager.py  utils.py  wallet.py
app/chain/abis/: ModelRegistry.json  NodeRegistry.json  SessionManager.json
app/http/: __init__.py  priva.py
app/inference/: models.py  routes.py  services.py
app/management/: models.py  routes.py  utils.py
app/models/: __init__.py  storage.py
