[tool.poetry]
name = "node"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^3.0.2"
redis = "^5.0.3"
web3 = "^6.15.1"
packaging = "^24.0"
torch = "2.1.2"
psutil = "^5.9.8"
outlines = "0.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
