[tool.poetry]
name = "node"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
web3 = "^6.15.1"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
transformers = "^4.38.2"
jinja2 = "^3.1.3"
cachetools = "^5.3.3"
docker = "^7.0.0"
aioipfs = "^0.6.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
